bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Erreur de compilation :
MonkeyTrouble:3: error: not found: value ||
  if (aSmile==true && bSmile==true)|| (aSmile && bsmile ==false){
                                   ^MonkeyTrouble:3: error: not found: value bsmile
  if (aSmile==true && bSmile==true)|| (aSmile && bsmile ==false){
                                                 ^