bat.bool1.monkeytrouble.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
  if (aSmile==true && bSmile==true)|| (aSmile && bsmile ==false){
    true
  } 
  false
}